github link added

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       <h1>Random Cat</h1>
     <img v-bind:src="catURL.file"/>
   </div>
+  <a href="https://github.com/sndubbs/nodecreate" target="blank">GitHub</a>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js" integrity="sha256-mpnrJ5DpEZZkwkE1ZgkEQQJW/46CSEh/STrZKOB/qoM=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.2/dist/vue.js"></script>
   <script src="javascripts/app.js"></script>
